# Python_Laba_4

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: Library.py  book.py  collections.py  simulation.py
tests/: test_book.py  test_collection.py  test_library.py  test_simulation.py
